Fix missing app header in config page, make blurry load in better

--- a/src/components/teams/TeamPreviewDisplay.css
+++ b/src/components/teams/TeamPreviewDisplay.css
@@ -16,7 +16,6 @@
 }
 
 .team-display-image {
-    border-radius: var(--team-display-border);
     height: 100%;
     width: 100%;
 
@@ -41,17 +40,11 @@
 
     transition: 0.25s;
 
+    overflow: hidden;
 
-}
+    border-radius: var(--team-display-border);
 
-.loading {
-    filter: blur(10px);
-    /*clip-path: inset(0);*/
-    clip-path: border-box;
-}
-.loaded {
-    filter: blur(0px);
-    transition: filter 0.5s linear;
+
 }
 
 .team-display-container:hover {
@@ -59,6 +52,16 @@
     width: calc(var(--normal-preview-size) + var(--bigger-preview-size));
 
     margin: calc(var(--preview-margin)- var(--bigger-preview-size));
+}
+
+.loading {
+    filter: blur(10px);
+    /*clip-path: inset(5px);*/
+}
+
+.loaded {
+    filter: blur(0px);
+    transition: filter 0.5s linear;
 }
 
 
@@ -82,6 +85,10 @@
     padding: 0.5vh 10%;
 
     overflow: hidden;
+
+    background-color: rgba(255, 255, 255, 0.2);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(5px);
 }
 
 .team-display-text {
